# leon-binaries

./: .gitignore  README.md  package.json
.github/config/: binaries.json
.github/data/: binary_versions.json
.github/scripts/: update_binaries.py  update_leon_toolkits.py  update_leon_tools.py
.github/workflows/: build-binaries.yml  update-binaries.yml
bins/chatterbox_onnx/: README.md  chatterbox_onnx.spec  pyproject.toml  run_chatterbox_onnx.py
bins/ecapa_voice_gender_classifier/: README.md  ecapa_voice_gender_classifier.spec  pyproject.toml  run_ecapa_voice_gender_classifier.py
bins/faster_whisper/: Pipfile  README.md  faster_whisper.spec  pyproject.toml  run_faster_whisper.py
bins/qwen3_asr/: README.md  pyproject.toml  qwen3_asr.spec  run_qwen3_asr.py
bins/qwen3_tts/: README.md  pyproject.toml  qwen3_tts.spec  run_qwen3_tts.py  sox.py
bins/qwen3_tts/mock/: reference.txt  tasks_custom.json  tasks_design.json  tasks_design_then_synthesize.json  tasks_design_then_synthesize_zh.json  tasks_synthesize.json
bins/qwen3_tts/torchaudio/: __init__.py
bins/qwen3_tts/torchaudio/compliance/: __init__.py  kaldi.py
bins/ultimate_vocal_remover_onnx/: README.md  pyproject.toml  run_ultimate_vocal_remover_onnx.py  ultimate_vocal_remover_onnx.spec
scripts/: build.js  create-prompt.js
scripts/prompt-templates/: create-new-tool-binaries-template.md
