[project]
name = "ecapa_voice_gender_classifier"
version = "1.0.0"
description = "Gender detection from voice files using ECAPA-TDNN"
requires-python = "==3.11.9"
dependencies = [
  # PyTorch versions are platform-specific
  # macOS x86_64 uses 2.2.2 (last version supporting Intel Macs)
  # PyTorch 2.3.0+ dropped support for macOS x86_64
  # All other platforms use 2.5.1
  "torch>=2.2.2,<2.6",
  "torchaudio>=2.2.2,<2.6",
  "soundfile==0.12.1",
  "huggingface-hub==0.26.5",
  "safetensors==0.4.5",
  "numpy==1.26.4",
]

[tool.uv]
# Use CPU-only PyTorch to reduce binary size (no CUDA dependencies)
# We use 'extra' indexes to keep PyPI as primary (for non-PyTorch packages)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

constraint-dependencies = [
  "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "torch==2.5.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "torchaudio==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "torchaudio==2.5.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[tool.uv.sources]
# Tell UV to get torch and torchaudio from the pytorch-cpu index
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
  "pyinstaller==6.15.0",
]
