[project]
name = "ecapa_voice_gender_classifier"
dynamic = ["version"]
description = "Gender detection from voice files using ECAPA-TDNN"
requires-python = "==3.11.9"
dependencies = [
  # PyTorch versions are platform-specific
  # macOS x86_64 uses 2.2.2 (last version supporting Intel Macs)
  # PyTorch 2.3.0+ dropped support for macOS x86_64
  # All other platforms use 2.5.1 CPU-only
  "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "torch==2.5.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "torchaudio==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "torchaudio==2.5.1; sys_platform != 'darwin' or platform_machine != 'x86_64'",
  "soundfile==0.12.1",
  "huggingface-hub==0.26.5",
  "safetensors==0.4.5",
  "numpy==1.26.4",
]

[tool.uv]
# Use CPU-only PyTorch to reduce binary size (no CUDA dependencies)
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
# Get torch/torchaudio from CPU index on non-macOS-x86_64 platforms
# For macOS x86_64, use PyPI (default) which has 2.2.2
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin' or platform_machine != 'x86_64'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform != 'darwin' or platform_machine != 'x86_64'" },
]

[tool.hatch.version]
path = "version.py"

[dependency-groups]
dev = [
  "pyinstaller==6.15.0",
]
