[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qwen3-asr"
dynamic = ["version"]
description = "Qwen3-ASR 1.7B Speech Recognition binary for Leon AI"
requires-python = "==3.11.9"
dependencies = [
    # PyTorch versions are platform-specific
    # macOS x86_64 uses 2.2.2 (last version supporting Intel Macs)
    # PyTorch 2.3.0+ dropped support for macOS x86_64
    # All other platforms use 2.10.0
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch==2.10.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "qwen-asr==0.0.6",
    "transformers==4.57.6",
    "numpy==1.26.4",
    "librosa==0.11.0",
    "soundfile==0.13.1",
    "backports-tarfile==1.2.0",
]

[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'linux' and platform_machine == 'aarch64'",
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'win32' and platform_machine == 'AMD64'",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["run_qwen3_asr.py", "version.py"]

[tool.hatch.version]
path = "version.py"

[dependency-groups]
dev = [
  "pyinstaller==6.15.0",
]
